[gd_scene load_steps=12 format=3 uid="uid://rmaooculr34k"]

[ext_resource type="Script" path="res://Map.gd" id="1_623w3"]
[ext_resource type="Texture2D" uid="uid://chxho4xuabwws" path="res://BG_blue.png" id="1_cguo2"]
[ext_resource type="Script" path="res://GUI.gd" id="1_tfsqn"]
[ext_resource type="Texture2D" uid="uid://7lldfx8bkchi" path="res://body.png" id="2_v1nhw"]
[ext_resource type="PackedScene" uid="uid://cpkvv7b486y7i" path="res://Character.tscn" id="2_vrurv"]
[ext_resource type="Texture2D" uid="uid://dmhn8rdnp8jv8" path="res://Banner_Connection_Up.png" id="3_hcneb"]
[ext_resource type="Texture2D" uid="uid://doruuykfc7f5c" path="res://head.png" id="3_omnn0"]
[ext_resource type="Texture2D" uid="uid://cfuqsfcp1evtu" path="res://arm.png" id="4_0lbn4"]
[ext_resource type="Theme" uid="uid://dnconj8wq31oh" path="res://Theme.tres" id="4_ub2nh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_txrbw"]
texture = ExtResource("1_cguo2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5dv8v"]
tile_size = Vector2i(64, 64)
sources/2 = SubResource("TileSetAtlasSource_txrbw")

[node name="World" type="Node2D"]
script = ExtResource("1_623w3")

[node name="GUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("1_tfsqn")
character = NodePath("../Character")

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
offset_left = -27.0
offset_top = 1.00001
offset_right = 337.0
offset_bottom = 301.0
scale = Vector2(0.8, 0.8)

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/MarginContainer"]
custom_minimum_size = Vector2(0, 300)
texture = ExtResource("3_hcneb")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/NinePatchRect"]
offset_left = 62.5
offset_top = 48.75
offset_right = 313.5
offset_bottom = 351.75
scale = Vector2(0.8, 0.8)

[node name="HeadLabel" type="Label" parent="GUI/MarginContainer/NinePatchRect/VBoxContainer"]
theme = ExtResource("4_ub2nh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 26
text = "Head Rotation (90°)"

[node name="HeadProgress" type="HSlider" parent="GUI/MarginContainer/NinePatchRect/VBoxContainer"]
theme = ExtResource("4_ub2nh")
max_value = 180.0
step = 5.0
rounded = true
allow_greater = true
allow_lesser = true
tick_count = 18
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/NinePatchRect/VBoxContainer"]
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ArmLabel" type="Label" parent="GUI/MarginContainer/NinePatchRect/VBoxContainer"]
theme = ExtResource("4_ub2nh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 26
text = "Arm Rotation (90°)"

[node name="ArmProgress" type="HSlider" parent="GUI/MarginContainer/NinePatchRect/VBoxContainer"]
theme = ExtResource("4_ub2nh")
max_value = 180.0
step = 5.0
rounded = true
allow_greater = true
allow_lesser = true
tick_count = 18
ticks_on_borders = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5dv8v")
cell_quadrant_size = 64
format = 2
layer_0/name = "Default"
layer_0/tile_data = PackedInt32Array(0, 2, 0, 65536, 2, 0, 65537, 2, 0, 131073, 2, 0, 196609, 2, 0, 262145, 2, 0, 327681, 2, 0, 262144, 2, 0, 196608, 2, 0, 131072, 2, 0, 327680, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 2, 0, 8, 2, 0, 7, 2, 0, 6, 2, 0, 5, 2, 0, 4, 2, 0, 3, 2, 0, 2, 2, 0, 1, 2, 0, 65538, 2, 0, 131074, 2, 0, 196610, 2, 0, 196611, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 65544, 2, 0, 65541, 2, 0, 65540, 2, 0, 131075, 2, 0, 196612, 2, 0, 196616, 2, 0, 196615, 2, 0, 131078, 2, 0, 131077, 2, 0, 131076, 2, 0, 65539, 2, 0, 262146, 2, 0, 196613, 2, 0, 131079, 2, 0, 65543, 2, 0, 65542, 2, 0, 196614, 2, 0, 131080, 2, 0)

[node name="Character" parent="." instance=ExtResource("2_vrurv")]
position = Vector2(303, 200)
head = ExtResource("3_omnn0")
body = ExtResource("2_v1nhw")
arm = ExtResource("4_0lbn4")

[connection signal="value_changed" from="GUI/MarginContainer/NinePatchRect/VBoxContainer/HeadProgress" to="GUI" method="_on_head_progress_value_changed"]
[connection signal="value_changed" from="GUI/MarginContainer/NinePatchRect/VBoxContainer/ArmProgress" to="GUI" method="_on_arm_progress_value_changed"]
